--- a/src/components/app/App.scss
+++ b/src/components/app/App.scss
@@ -1,10 +1,11 @@
 @import '../../style/variables.scss';
 
 .main{
-    height: 100vh;
+    min-height: 100vh;
     background-color: $main-color;
     .title{
         padding-top: 80px;
+        padding-bottom: 25px;
         text-align: center;
         font-size: 70px;
         font-weight: 300;
@@ -16,10 +17,10 @@
 .content{
     position: relative;
     width: 900px;
-    min-height: 100px;
+    height: auto;
     border: none;
     box-shadow: 0px 0px 31px 6px rgba(0,0,0,0.25);
-    margin: 30px auto;
+    margin: 0 auto;
 }
 
 @media(max-width: 900px){
