--- a/src/components/listItem/listItem.scss
+++ b/src/components/listItem/listItem.scss
@@ -22,6 +22,7 @@
             font-size: 23px;
             margin-left: 25px;
             color: rgb(51, 51, 51);
+            word-break: break-word;
         }
         .text_complete{
             text-decoration: line-through;
@@ -30,10 +31,14 @@
         }
     }
     .delete_item{
+        opacity: 1;
         font-size: 30px;
         font-weight: 200;
         color:rgb(116, 116, 116);
         cursor: pointer;
+    }
+    .hide{
+        opacity: 0;
     }
 }
 
@@ -49,9 +54,7 @@
 
 
 
-.hide{
-    display: none;
-}
+
 
 
 @media(max-width: 525px){
@@ -74,7 +77,7 @@
 
 @media(max-width: 400px){
     .list_item .main_elem .item_title{
-        margin-left: 0;
+        margin-left: 10px;
     }
 
 }
